# peanubudget-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  terraform.tf
.devcontainer/: devcontainer.json  run-post-create-set-up.sh
.github/workflows/: deploy-app.yaml  test-app.yaml
app/: main.py
kubernetes/: values.yaml
kubernetes/templates/: deployment.yaml  load-balancer.yaml
script/: azure-create-service-principal.sh  kubernetes-connect-kubectl-to-aks.sh  kubernetes-deploy-chart.sh  kubernetes-print-manifest.sh  kubernetes-stop-cluster.sh  python-activate-virtual-environment.sh  python-format-files.sh  python-install-packages.sh
