[tool.poetry]
name = "peanubudget-backend"
version = "0.1.0"
description = "Backend for the peanubudget project"
authors = ["Giuseppe Tinti Tomio <fake@email.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.92.0"}
psycopg2-binary = "^2.9.5"
sqlmodel = "^0.0.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipython = "^8.10.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pre-commit = "^3.1.0"
pylint = "^2.16.2"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.format]
max-line-length = "100"

[tool.pylint]
recursive = true
ignore = "debug.py"
disable = "R0801, R0903, R0914, C0114, C0115, C0116"
